# limatix

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .hgtags  COPYING.txt  INSTALL.txt  Makefile  NOTES.txt  README.txt  TODO  VERSION  VERSIONDATE  defs.mk  pyproject.toml  setup.py
checklists/: testlist.chx  thermalconductivity_meas.chx  thermalconductivity_prep.chx
conf/: imports.dcc  thermalconductivity.dcc
datacollect2/: checklist.glade  checklist.py  checklistdb.py  checklistdbwin.py  dc2_misc.py  dc_gtksupp.py  dc_process_common.py  dc_process_procstep.py  dc_process_prxdoc.py  dc_process_stdiocapture.py  dc_process_stepparam.py  dc_provenance.py  dc_unitscalc.py  dc_value.py  dc_xmlgrab2.py  dg_io.py  explogwindow.py  genericmethodwrapper.py  paramdb2.py  paramdb2_editor.py  paramdb2_wrapper.py  paramdbfile.py  provenance.xsd  readablehash.py  ricohcamera.py  standalone_checklist.py  steptemplate.py  testviewautoexp  testxmlgrab.py  xmldoc.py  xmlexplog.py
dcp_steps/: Makefile
doc/: INSTALL  LIMATIX.xhtml  datacollect2.xhtml  dc_process.odp  processtrak.odp  prx_example.prx  xmldoc_tutorial.xhtml
lib/: checklist.glade  checklist.py  checklistdb.py  checklistdbwin.py  dbus_camera.py  dc2_misc.py  dc_dbus_barcode.py  dc_dbus_paramserver.py  dc_gtksupp.py  dc_process_common.py  dc_provenance.py  dc_value.py  dg_io.py  explogwin.glade  explogwindow.py  genericmethodwrapper.py  paramdb2.py  paramdb2_editor.py  paramdb2_wrapper.py  paramdbfile.py  ricohcamera.glade  ricohcamera.py  ricohphoto.glade  standalone_checklist.py  steptemplate.py  xmldoc.py  (+4 more)
(+227 files in other folders)
